--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <nav>
         <div class="nav-left">
-            <a href="mybook.html">
+            <a href="index.html">
             <img src="img/0000.png" alt="this is a profile photo" class="logo"></a>
             <ul>
                 <li>
