--- a/profile.html
+++ b/profile.html
@@ -11,8 +11,8 @@
 
     <nav>
         <div class="nav-left">
-            <a href="mybook.html">
-            <img src="img/new1/0000.png" alt="this is a profile photo" class="logo"></a>
+            <a href="index.html">
+            <img src="img/0000.png" alt="this is a profile photo" class="logo"></a>
             <ul>
                 <li>
                     <img src="img/notification.png" alt="">
